--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Copy file to Airflow server
       env:
-        GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_PAT: ${{ secrets.TOKEN_GITHUB }}
       run: |
         # config as github action bot
         rm -rf .git
